--- a/styles/History.module.scss
+++ b/styles/History.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding-top: 255px;
   padding-bottom: 355px;
+  overflow: hidden;
   // background: linear-gradient(
   //     0deg,
   //     rgba(36, 36, 36, 0.7),
