--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -7,6 +7,7 @@
   }
   padding-top: 270px;
   padding-bottom: 180px;
+  overflow: hidden;
   // &:before {
   //   content: "";
   //   position: absolute;
